# qrcodes

./: README.md  index.html  qrcodes.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
