name:                qrcodes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/qrcodes#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       array
                     , base >= 4.7 && < 5
                     , bytestring
                     , base32string
                     , colour
                     , cryptonite
                     , diagrams-core
                     , diagrams-lib
                     , diagrams-qrcode
                     , diagrams-svg
                     , nonce
                     , qrcode
                     , time
  default-language:    Haskell2010

executable qrcodes-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , qrcodes
  default-language:    Haskell2010

test-suite qrcodes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , qrcodes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/qrcodes
